# monitoramento_preco

./: .gitignore  README.md  monitora_preco.py  pyproject.toml
