[tool.poetry]
name = "starbuzz"
version = "0.1.0"
description = "Atividade - urllib"
authors = ["jhonathasmoura <jhonathasmoura6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
yagmail = "^0.15.293"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
